--- a/RPSLS/RPSLS.csproj
+++ b/RPSLS/RPSLS.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Choices.cs" />
     <Compile Include="ComputerPlayer.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="GameManager.cs" />
     <Compile Include="HumanPlayer.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
